--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -349,8 +349,9 @@
 		
 	&--search
 		text-align: left
-		.pay-table__head td:nth-child(1)
-			padding: 10px 20px
+		.pay-table__head td:nth-child(1),
+		.pay-table__head td:nth-child(2)
+			padding: 17px 20px
 		.pay-table__body td
 			padding: 15px 30px
 			border-bottom: 1px solid #e8e8e8
