--- a/src/sass/components/_screen.sass
+++ b/src/sass/components/_screen.sass
@@ -3,6 +3,8 @@
 	padding: 50px 0 55px
 	+md
 		padding: 30px 0 45px
+	+sm
+		box-shadow: 0px -1px 20px 2px rgba(0, 0, 0, 0.15)
 	&__col
 		position: relative
 		&:nth-child(1)
