--- a/src/sass/components/_about.sass
+++ b/src/sass/components/_about.sass
@@ -2,7 +2,7 @@
 	padding: 50px 0 45px
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.14)
 	+sm
-		padding: 30px 0
+		display: none
 	&__title
 		margin-bottom: 15px
 		+sm
