--- a/src/sass/components/_search.sass
+++ b/src/sass/components/_search.sass
@@ -15,8 +15,6 @@
 	&__title
 		margin-bottom: 10px
 		text-transform: none
-		+md
-			font-size: 19px
 	&__inner
 		+clr
 	&__form-wrapp
@@ -90,6 +88,8 @@
 		text-align: center
 		font-size: 0
 		text-transform: uppercase
+		+sm
+			padding: 15px 0
 	&__types-top
 		position: relative
 		padding: 20px 0 65px
