--- a/src/templates/partials/_screen.html
+++ b/src/templates/partials/_screen.html
@@ -1,5 +1,5 @@
 <section class="screen screen--home">
-   <div class="container">
+   <div class="screen__container container">
       <div class="screen__col col-l">
          {% include "partials/_sidebar.html" %}
       </div>
