--- a/src/templates/partials/_search.html
+++ b/src/templates/partials/_search.html
@@ -1,4 +1,4 @@
-<div class="search">
+<div class="search search--home">
     <h2 class="search__title search__title--short title-sm">ПОИСК СРЕДИ 20 000 000 ЗАПЧАСТЕЙ ДЛЯ ИНОМАРОК, ОТЕЧЕСТВЕННЫХ И ГРУЗОВЫХ АВТО</h2>
     <div class="search__inner">
         <div class="search__form-wrapp search__form-wrapp--full">
