--- a/src/sass/components/_screen.sass
+++ b/src/sass/components/_screen.sass
@@ -5,6 +5,9 @@
 		padding: 30px 0 45px
 	+sm
 		box-shadow: 0px -1px 20px 2px rgba(0, 0, 0, 0.15)
+	&__container
+		+sm
+			display: table
 	&__col
 		position: relative
 		&:nth-child(1)
@@ -14,7 +17,9 @@
 			+md
 				width: 35%
 			+sm
+				float: none
 				width: 100%
+				display: table-footer-group
 		&:nth-child(2)
 			width: 74.32433%
 			+lg
@@ -22,7 +27,8 @@
 			+md
 				width: 63.5%
 			+sm
-				padding-top: 15px
+				float: none
+				display: table-header-group
 				width: 100%
 		&:nth-child(3)
 			width: 74.32433%
@@ -30,6 +36,8 @@
 				width: 72%
 			+md
 				width: 100%
+			+sm
+				display: none
 	&__sld-wrapp
 		+md
 			width: 100%
@@ -38,26 +46,12 @@
 		margin: 20px auto 0
 		overflow: hidden
 		border-radius: 5px
-		//box-shadow: 0 2px 3px rgba(14, 30, 46, 0.2)
-		+r(560)
-			display: none
 		+sm
 			margin: 0 -15px
 			border-radius: 0
 	&__sld-item
-		//height: 280px
 		position: relative
-		+r(560)
-	//height: 240px
 	&__sld-pic
-		//position: absolute
-		//z-index: 0
-		//width: 100%
-		//height: 100%
-		//pointer-events: none
-		//background-position: center center
-		//background-repeat: no-repeat
-		//background-size: initial
 		img
 			width: 100%
 	&__sld-inner
@@ -65,19 +59,10 @@
 		top: 50%
 		transform: translateY(-50%)
 		left: 60px
-		//position: relative
-		//padding-left: 60px
 		z-index: 2
 		font-size: 0
-		//height: 100%
 		+lg
 			left: 20px
-	//padding-left: 25px
-	//&::before
-	//	content: ''
-	//	display: inline-block
-	//	vertical-align: middle
-	//	height: 100%
 	&__sld-text
 		display: inline-block
 		vertical-align: middle
@@ -151,3 +136,7 @@
 		padding: 50px 0 20px
 	&--basket
 		padding: 50px 0 85px
+	&--home
+		.search__title
+			+sm
+				display: none
