--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -545,7 +545,7 @@
 	background-color: #0079c0
 	-webkit-tap-highlight-color: transparent
 	outline: none
-	box-shadow: 0 0 10px #8a8a89
+	box-shadow: 0 0 5px #000
 	text-align: center
 	line-height: 45px
 	+tr(background-color .25s)
