--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -65,6 +65,10 @@
 		max-height: 82px
 		+sm
 			margin: 0 auto
+	&--footer
+		+sm
+			max-width: 170px
+			margin: 0 auto
 
 .contacts
 	font-size: 16px
@@ -183,6 +187,9 @@
 		+sm
 			display: block
 			padding: 10px 0
+			&:first-of-type
+				padding-top: 20px
+				border-top: 1px solid  #e7e7e7
 		&:first-of-type
 			margin-left: 0
 		&:last-of-type
@@ -288,3 +295,6 @@
 			+md
 				display: inline-block
 				vertical-align: middle
+		.loc__all
+			 +sm
+				 padding: 0
