--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<div class="container">
 		<div class="footer__col">
-				<a class="logo" href="#">
+				<a class="logo logo--footer" href="#">
 					<img class="logo__img" src="img/logo.png" alt="logo"></a>
 			<div class="footer__copyright">Межрегиональная ассоциация «ВЕХА» <br>&copy; 1992 — 2017</div>
 			</div>
