finish basket page

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -127,9 +127,8 @@ h1, h2, h3, h4, h5, h6
 	text-align: center
 	text-transform: uppercase
 	color: $black-light
-	padding: 0 19px
-	line-height: 41px
-	height: 41px
+	padding: 10px 19px
+	line-height: 1.5
 	border: 1px solid #40403e
 	border-radius: 5px
 	text-decoration: none
@@ -149,7 +148,7 @@ h1, h2, h3, h4, h5, h6
 		vertical-align: middle
 		+tr(fill .25s)
 	&--blue
-		padding: 0 23px
+		padding: 10px 23px
 		color: #005895
 		border-color: #005895
 		
@@ -221,6 +220,7 @@ h1, h2, h3, h4, h5, h6
 	display: inline-block
 	label
 		cursor: pointer
+		-webkit-tap-highlight-color: transparent
 		&::before
 			display: inline-block
 			vertical-align: middle
