--- a/src/templates/partials/_screen.html
+++ b/src/templates/partials/_screen.html
@@ -1,12 +1,12 @@
 <section class="screen screen--home">
    <div class="screen__container container">
-      <div class="screen__col col-l">
+      <div class="screen__col">
          {% include "partials/_sidebar.html" %}
       </div>
-      <div class="screen__col col-r">
+      <div class="screen__col">
          {% include "partials/_search.html" %}
       </div>
-      <div class="screen__col col-r">
+      <div class="screen__col">
          <div class="screen__sld js-screen-sld">
             <div class="screen__sld-item">
                <div class="screen__sld-pic">
