--- a/src/sass/components/_screen.sass
+++ b/src/sass/components/_screen.sass
@@ -115,6 +115,12 @@
 		padding: 50px 0
 	&--personal
 		padding: 50px 0 90px
+		.screen__col:nth-child(1)
+			+md
+				display: none
+		.screen__col:nth-child(2)
+			+md
+				width: 100%
 	&--personal-sm
 		padding: 50px 0 80px
 	&--foreign
