--- a/src/sass/components/_basket.sass
+++ b/src/sass/components/_basket.sass
@@ -138,6 +138,8 @@
 				color: #8a8a89
 		&-link
 			margin: 0 10px
+			+xs
+				margin: 0 5px
 			&.is-active
 				color: #40403e
 				border-bottom-color: transparent
