--- a/src/sass/components/_sidebar.sass
+++ b/src/sass/components/_sidebar.sass
@@ -108,7 +108,7 @@
 		margin-bottom: 10px
 		line-height: 1.3
 	&__btn
-		padding: 0 22px
+		padding: 10px 22px
 	&__link
 		font-family: $PS
 		text-transform: uppercase
